# File: HISTORY.txt
#
14-Feb-2021 - V0.11 Created module with content migrated from rcsb.db
19-Feb-2021 - V0.12 Add IdCode exclusion filter to getLocatorObjList() add method getLocatorIdcodes()
15-Apr-2021 - V0.13 Add diagnostics for BIRD/Family/CC integration
16-Apr-2021 - V0.14 Report unreleased BIRD entries
 5-May-2021 - V0.15 Update dependencies