@@ -2,3 +2,4 @@ mmcif >= 0.67
 rcsb.utils.io >= 1.00
 rcsb.utils.multiproc >= 0.18
 rcsb.utils.validation >= 0.22
+pytz >= 2021.1
